# books-agent

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  set_webhook.py  test_pipeline.py
orchestrator/: agent.py  mcp_client.py  schema.py
orchestrator/cover/: __init__.py  agent.py  vision.py
orchestrator/discovery/: __init__.py  agent.py
orchestrator/metadata/: __init__.py  agent.py
orchestrator/publisher/: __init__.py  agent.py
orchestrator/researcher/: agent.py
orchestrator/taxonomy/: agent.py
orchestrator/writer/: __init__.py  agent.py
scratch/: test_cover_1.py  test_cover_2.py  test_cover_3.py  test_discovery_1.py  test_discovery_2.py  test_discovery_3.py  test_metadata_1.py  test_metadata_2.py  test_metadata_3.py  test_metadata_4.py  test_metadata_5.py  test_metadata_6.py  test_orchestrator_1.py  test_publisher_1.py  test_researcher_1.py  test_researcher_2.py  test_writer_1.py
