[project]
name = "books-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "book-metadata-mcp>=0.2.0",
    "ddgs>=9.14.1",
    "fastapi>=0.136.1",
    "google-adk>=1.32.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "uvicorn>=0.46.0",
]
